# mkdocs-table-reader-plugin

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  schema.json  setup.py  sitemap.xml
.github/workflows/: codespell.yml  pythonpublish.yml  workflow.yml
assets/tables/: basic_table.csv  data.feather  html_table.csv
assets/tables/markdown_table/: index.html
docs/: customization.md  index.md  options.md  readers.md  schema.json
docs/assets/tables/: data.json  fixedwidth_table.txt  html_table.csv
docs/howto/: alternatives.md  customize_tables.md  docker.md  preprocess_tables.md  project_structure.md  use_jinja2.md
howto/alternatives/: index.html
howto/customize_tables/: index.html
howto/docker/: index.html
howto/preprocess_tables/: index.html
howto/project_structure/: index.html
howto/use_jinja2/: index.html
mkdocs_table_reader_plugin/: fences.py  markdown.py  plugin.py  readers.py  safe_eval.py  utils.py
options/: index.html
readers/: index.html
scripts/benchmark/: benchmark.sh
scripts/benchmark/sample_project/: mkdocs.yml  mkdocs_no_tablereader.yml  mkdocs_selected_readers.yml  mkdocs_superfences.yml
scripts/benchmark/sample_project/docs/: .gitignore
search/: search_index.json
src/mkdocs_table_reader_plugin/: markdown.py  plugin.py  readers.py  safe_eval.py  utils.py
tests/: test_build.py  test_kwargs.py  test_markdown.py  test_requirements.txt  test_safe_eval.py
tests/basic_setup/: mkdocs.yml
tests/basic_setup/assets/tables/: basic_table.csv  table_with_carriage_return.csv
tests/basic_setup/docs/: index.md  page_carriage_return.md  page_read_csv.md  page_read_excel.md  page_read_fwf.md  page_read_table.md  page_read_txt.md  page_with_tag.md
tests/fixtures/basic_setup/: mkdocs_theme.yml  mkdocs_w_macros.yml  mkdocs_w_macros_wrong_order.yml  mkdocs_w_markdownextradata.yml  mkdocs_w_markdownextradata_wrong_order.yml
tests/fixtures/basic_setup/docs/: bad_tags.md  index.md  page_read_excel.md  page_read_fwf.md  page_read_json.md  page_read_two_csv.md  page_read_yaml.md
tests/fixtures/csv_with_pipes/docs/: example_escaped.csv  example_unescaped.csv  index.md
tests/fixtures/data_path_with_space/: mkdocs.yml
tests/fixtures/datapathproject/: mkdocs.yml  mkdocs_trailingslash.yml
tests/fixtures/jinja/: mkdocs.yml  mkdocs_table_before_macro.yml
tests/fixtures/markdownextradata/: mkdocs.yml  mkdocs_w_markdownextradata.yml  mkdocs_w_markdownextradata_wrong_order.yml
tests/fixtures/nonstringheaders/: mkdocs.yml
tests/fixtures/search_page_directory/: mkdocs.yml
tests/fixtures/search_problem/: mkdocs.yml
tests/fixtures/superfence/: mkdocs.yml
tests/fixtures/table_path_with_space/: mkdocs.yml
tests/fixtures/using_docs_dir/: mkdocs.yml
tests/fixtures/wrongpath/: mkdocs.yml  mkdocs_allow_missing.yml
(+28 files in other folders)
